2nd Update. Fix DB Connector psycopg2

--- a/profiles.ini
+++ b/profiles.ini
@@ -4,3 +4,9 @@ port = 5672
 credentials = guest
 exchange = logs
 type = fanout
+
+[psql1]
+dbname = testdb1
+user = postgres
+host = 139.59.231.103
+port = 5432
